--- a/src/main/resources/templates/layouts/index.html
+++ b/src/main/resources/templates/layouts/index.html
@@ -18,6 +18,8 @@
 	th:href="@{/css/AdminLTE.min.css}">
 <link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
 	th:href="@{/css/skins/_all-skins.min.css}">
+	<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
 
 
 </head>
@@ -30,7 +32,7 @@
 
 			<div class="wrapper">
 
-				<section class="content-wrapper">
+				<section class="content-wrapper"  >
 
 
 					<div class="row">
@@ -39,11 +41,9 @@
 
 
 
-							<div class="col-md-12" style="margin-top: 20px;" th:style="'background: url(/img/theme/bck-theme-1.jpg) no-repeat center center fixed;'">
+							<div class="col-md-12" style="margin-top: 20px;" >
 
-								<div class="box box-primary"  th:style="'background: url(/img/theme/bck-theme-1.jpg) no-repeat center center fixed;'">
-									<!-- <img th:src="@{/css/img/theme/pixel.jpg}"  alt="alt" class="img-fluid"  style="height: 100%"/> -->
-								</div>
+								
 							</div>
 
 
