--- a/src/main/resources/templates/layouts/login.html
+++ b/src/main/resources/templates/layouts/login.html
@@ -22,7 +22,7 @@
 
 	<form th:action="@{/doLogin}" method="POST" th:object="${myCaptcha}" id="myForm"> 
 
-		<section class="vh-100" style="background-color: #508bfc;">
+		<section class="vh-100" style="background-image:  url('http://www.jkpolice.gov.in/img/PHQ.jpg'); filter:blur();padding-top:150px;">
 			<div class="container py-5 h-100">
 				<div class="row d-flex justify-content-center align-items-center h-100">
 					<div class="col-12 col-md-8 col-lg-6 col-xl-5">
