--- a/src/main/resources/templates/layouts/reportview/stockLedgerDetails.html
+++ b/src/main/resources/templates/layouts/reportview/stockLedgerDetails.html
@@ -70,7 +70,7 @@
 									<form id="categoryForm" role="form" method="POST" th:action="@{stockitem}">
 										<div class="box-body">
 
-											<div class="form-group col-md-6">
+											<!--<div class="form-group col-md-6">
 												<label>Category</label> <label style="color: red">*</label> <select
 													class="form-control" title="" name="category">
 													
@@ -81,9 +81,9 @@
 												
 											</div>
 
+-->
 
-
-											<div class="form-group col-md-6">
+											<!--<div class="form-group col-md-6">
 												<label>Item</label> <label style="color: red">*</label> <select
 													class="form-control" title="" name="Item">
 													<option value="Uniform">Select Item</option>
@@ -92,7 +92,7 @@
 												</select>
 												
 											</div>
-
+-->
 
 											<div class="form-group col-md-6">
 												<label for="inputEmail4">From Date</label><span
@@ -108,10 +108,10 @@
 											</div>
 
 			<div class="form-group col-md-6">
-												<label>Format Type</label> <label style="color: red">*</label> <select
-													class="form-control" title="">
-													<option value="">Select Excel</option>
-													<option value="pdf">Select PDF</option>
+												<label>DesFormat</label> <label style="color: red">*</label> <select
+													class="form-control"  name="format">
+													<option value="pdf"> PDF</option>
+													<option value="excel">Excel</option>
 
 												</select>
 												
