--- a/src/main/resources/templates/layouts/reportview/stockLedgerSummary.html
+++ b/src/main/resources/templates/layouts/reportview/stockLedgerSummary.html
@@ -33,7 +33,204 @@
 			<section class="content-header">
 				<h1>
 					<small>it all starts here</small>
+				
 				</h1>
+				<ol class="breadcrumb">
+					<li><a th:href="@{/home}"><i class="fa fa-dashboard"></i> Home</a></li>
+					<li><a href="#">Examples</a></li>
+					<li class="active">Blank page</li>
+				</ol>
+			</section>
+
+			<!-- Main content -->
+			<section class="content">
+
+
+
+
+				<!-- Default box -->
+				<div class="box">
+
+
+
+					<div class="row">
+						<!-- left column -->
+						<div class="col-md-12">
+							<div class="col-md-2"></div>
+
+
+							<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+								<!-- general form elements -->
+								<div class="box box-primary">
+									<input type="hidden" id="mess" name="mess" th:value="${message}">
+									<div class="box-header with-border">
+										<!--<h3 class="box-title">Category Master</h3>-->
+									</div>
+									<!-- /.box-header -->
+									<!-- form start -->
+									<form id="categoryForm" role="form" method="POST" th:action="@{stockitem}">
+										<div class="box-body">
+
+											<!--<div class="form-group col-md-6">
+												<label>Category</label> <label style="color: red">*</label> <select
+													class="form-control" title="" name="category">
+													
+													<option value="">Select Category</option>
+													<option value="A">Category A</option>
+
+												</select>
+												
+											</div>
+
+-->
+
+											<!--<div class="form-group col-md-6">
+												<label>Item</label> <label style="color: red">*</label> <select
+													class="form-control" title="" name="Item">
+													<option value="Uniform">Select Item</option>
+													<option value="shoes">Select Item</option>
+
+												</select>
+												
+											</div>
+-->
+
+											<div class="form-group col-md-6">
+												<label for="inputEmail4">From Date</label><span
+													style="color: red">*</span> <input type="date"  name="fromDate" class="form-control"
+													placeholder="Date" title="This field is required">
+											</div>
+
+
+											<div class="form-group col-md-6">
+												<label for="inputEmail4">To Date</label><span
+													style="color: red">*</span> <input type="date"  name="toDate" class="form-control"
+													placeholder="Date" title="This field is required">
+											</div>
+
+			<div class="form-group col-md-6">
+												<label>DesFormat</label> <label style="color: red">*</label> <select
+													class="form-control" title="" name="DesFormat">
+													<option value="excel"> Excel</option>
+													<option value="pdf">Select PDF</option>
+
+												</select>
+												
+											</div>
+
+											
+											<!--<div class="container">
+  <h2>Dropdowns</h2>
+            
+  <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#">Excel</a></li>
+      <li><a href="#">PDF</a></li>
+      
+    </ul>
+  </div>
+</div>-->
+
+
+
+
+
+											<!--	<div class="form-group col-md-6">
+												<label class="form-label">Ac</label> <select
+													class="form-control" id="" title="account head">
+													<option value="">Select</option>
+													<option value="1">type-1</option>
+													<option value="2">type-2</option>
+												</select>
+											</div>
+
+-->
+											<!--	<div class="form-group col-md-6">
+												<label for="inputEmail4">Account Description</label> <input type="text"
+													class="form-control" placeholder="Account Description"
+													title="account discription">
+											</div>
+-->
+											<!--
+											<div class="form-group col-md-6">
+												<label for="inputEmail4">Parent Code</label> <input type="text"
+													class="form-control uppercase  textOnly" maxlength="2"
+													placeholder="Parent Code" title="parent code">
+											</div>
+-->
+											<!--	<div class="form-group col-md-6">
+												<label for="inputEmail4">Parent Name</label> <input type="text"
+													class="form-control " placeholder="Parent Name" title="parent name">
+											</div>
+-->
+											<!--
+											<label class="checkbox-inline"> <input type="radio" value="Y" name="active"
+													checked style="margin-left: 5px">Active <input type="radio"
+													value="N" name="active" style="margin-left: 5px">In-Active
+											</label>
+-->
+										</div>
+										<!-- /.box-body -->
+
+										<div class="box-footer" style="margin: 10px">
+											<input type="submit" value="Submit" class="btn btn-primary" />
+											<input type="reset" value="Reset" class="btn btn-danger" />
+										</div>
+
+
+									</form>
+
+
+								</div>
+								<!-- /.box -->
+
+							</div>
+
+
+							<div class="col-md-2"></div>
+						</div>
+
+					</div>
+
+				</div>
+
+			</section>
+			<!-- /.content -->
+		</div>
+
+	</div>
+
+	<!-- <div th:replace="fragments/footer :: footer">...</div> -->
+	<!--   <section class="content">
+        
+        </section>-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<script src="js/jQuery-2.1.4.min.js"></script>
+
+	<script src="js/bootstrap.min.js"></script>
+
+	<script src="js/fastclick.min.js"></script>
+
+	<script src="js/app.min.js"></script>
+
+	<script src="/js/demo.js"></script>
+</body>
+
+</html>
 				<ol class="breadcrumb">
 					<li><a th:href="@{/home}"><i class="fa fa-dashboard"></i> Home</a></li>
 					<li><a href="#">Examples</a></li>
