--- a/src/main/resources/templates/layouts/editview/editCompany.html
+++ b/src/main/resources/templates/layouts/editview/editCompany.html
@@ -52,6 +52,21 @@
 			<div class="wrapper">
 
 				<section class="content-wrapper">
+				
+				<!-- Content Header (Page header) -->
+					<section class="content-header">
+						<h4>
+							Company Master
+							<!--<small>it all starts here</small>-->
+						</h4>
+						<ol class="breadcrumb">
+							<li><a href="#"><i class="fa fa-dashboard"></i> Master</a></li>
+							<li><a href="#">Company</a></li>
+							<li class="active">Edit Company</li>
+						</ol>
+					</section>
+					
+					
 
 					<!-- form start -->
 					<form id="companyDetail" class="wizard wizard-primary" role="form"
