--- a/src/main/resources/templates/layouts/editview/editDepartment.html
+++ b/src/main/resources/templates/layouts/editview/editDepartment.html
@@ -40,7 +40,7 @@
 						<ol class="breadcrumb">
 							<li><a href="#"><i class="fa fa-dashboard"></i>Master</a></li>
 							<li><a href="#">Department</a></li>
-							<li class="active">Edit Page</li>
+							<li class="active">Edit Department</li>
 						</ol>
 					</section>
 
