--- a/src/main/resources/templates/layouts/editview/editSubModule.html
+++ b/src/main/resources/templates/layouts/editview/editSubModule.html
@@ -38,9 +38,10 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i> Software
+									Admin</a></li>
+							<li><a href="#">Edit Sub-Module</a></li>
+
 						</ol>
 					</section>
 
@@ -56,6 +57,19 @@
 							<div class="row">
 								<!-- left column -->
 								<div class="col-md-12">
+
+									<div class="box-header with-border text-right">
+										<button type="submit" id="submit"
+											class="btn btn-primary btn-sm">
+											<i class="fa fa-hdd-o" aria-hidden="true"></i> Apply Changes
+										</button>
+										<button type="button" class="btn btn-danger btn-sm"
+											onclick="history.back()">
+											<i class="fa fa-step-backward"></i> Go Back
+										</button>
+									</div>
+
+
 									<div class="col-md-2"></div>
 
 
@@ -114,11 +128,7 @@
 												</div>
 												<!-- /.box-body -->
 
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Apply Changes" class="btn btn-primary" />
-													<input type="button" value="Go back!"
-														class="btn btn-danger" onclick="history.back()">
-												</div>
+
 
 
 											</form>
