--- a/src/main/resources/templates/layouts/login.html
+++ b/src/main/resources/templates/layouts/login.html
@@ -22,12 +22,12 @@
 
 	<form th:action="@{/doLogin}" method="POST" th:object="${myCaptcha}" id="myForm"> 
 
-		<section class="vh-100" style="background-image:  url('http://www.jkpolice.gov.in/img/PHQ.jpg'); filter:blur();padding-top:150px;">
+		<section class="vh-100" style="background-image:  url('http://www.jkpolice.gov.in/img/PHQ.jpg'); filter:blur();padding-top:50px;">
 			<div class="container py-5 h-100">
 				<div class="row d-flex justify-content-center align-items-center h-100">
 					<div class="col-12 col-md-8 col-lg-6 col-xl-5">
-						<div class="card shadow-2-strong" style="border-radius: 1rem;">
-							<div class="card-body p-5 text-center">
+						<div class="card shadow-2-strong" style="border-radius: 1rem;background-color: rgba(245, 245, 245, 0.4) ; ; height:350px;margin-top:50px">
+							<div class="card-body p-5 text-center" style="margin-top:-30px">
 
 								<h3 class="mb-5">Sign in</h3>
 
