--- a/src/main/resources/templates/layouts/reportview/stockCategoryWise.html
+++ b/src/main/resources/templates/layouts/reportview/stockCategoryWise.html
@@ -33,7 +33,6 @@
 			<section class="content-header">
 				<h1>
 					<small>it all starts here</small>
-				
 				</h1>
 				<ol class="breadcrumb">
 					<li><a th:href="@{/home}"><i class="fa fa-dashboard"></i> Home</a></li>
@@ -68,147 +67,10 @@
 									</div>
 									<!-- /.box-header -->
 									<!-- form start -->
-									<form id="ledgerForm" role="form" method="POST" th:action="@{summary}">
-										<class="box-body">
-
-									
-
-											<div class="form-group col-md-6">
-												<label for="inputEmail4">From Date</label><span
-													style="color: red">*</span> <input type="date"  name="fromDate" class="form-control"
-													placeholder="Date" title="This field is required">
-											</div>
-
-
-											<div class="form-group col-md-6">
-												<label for="inputEmail4">To Date</label><span
-													style="color: red">*</span> <input type="date"  name="toDate" class="form-control"
-													placeholder="Date" title="This field is required">
-											</div>
-
-			<div class="form-group col-md-6">
-												<label>DesFormat</label> <label style="color: red">*</label> <select
-													class="form-control" title="" name="des">
-													<option value="P">Select PDF</option>
-													<option value="E">Select excel</option>
-
-												</select>
-												
-											</div>
-
-											
-											<!--<div class="container">
-  <h2>Dropdowns</h2>
-            
-  <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
-    <span class="caret"></span></button>
-    <ul class="dropdown-menu">
-      <li><a href="#">Excel</a></li>
-      <li><a href="#">PDF</a></li>
-      
-    </ul>
-  </div>
-</div>-->
-
--->
-										
-										<!-- /.box-body -->
-
-										<div class="box-footer" style="margin: 10px">
-											<input type="submit" value="Submit" class="btn btn-primary" />
-											<input type="reset" value="Reset" class="btn btn-danger" />
-										</div>
-
-
-									</form>
-
-
-								</div>
-								<!-- /.box -->
-
-							</div>
-
-
-							<div class="col-md-2"></div>
-						</div>
-
-					</div>
-
-				</div>
-
-			</section>
-			<!-- /.content -->
-		</div>
-
-	</div>
-
-	<!-- <div th:replace="fragments/footer :: footer">...</div> -->
-	<!--   <section class="content">
-        
-        </section>-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-	<script src="js/jQuery-2.1.4.min.js"></script>
-
-	<script src="js/bootstrap.min.js"></script>
-
-	<script src="js/fastclick.min.js"></script>
-
-	<script src="js/app.min.js"></script>
-
-	<script src="/js/demo.js"></script>
-</body>
-
-</html>
-				<ol class="breadcrumb">
-					<li><a th:href="@{/home}"><i class="fa fa-dashboard"></i> Home</a></li>
-					<li><a href="#">Examples</a></li>
-					<li class="active">Blank page</li>
-				</ol>
-			</section>
-
-			<!-- Main content -->
-			<section class="content">
-
-
-
-
-				<!-- Default box -->
-				<div class="box">
-
-
-
-					<div class="row">
-						<!-- left column -->
-						<div class="col-md-12">
-							<div class="col-md-2"></div>
-
-
-							<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
-								<!-- general form elements -->
-								<div class="box box-primary">
-									<input type="hidden" id="mess" name="mess" th:value="${message}">
-									<div class="box-header with-border">
-										<!--<h3 class="box-title">Category Master</h3>-->
-									</div>
-									<!-- /.box-header -->
-									<!-- form start -->
-									<form id="categoryForm" role="form" method="POST" th:action="@{stockitem}">
+									<form id="categoryForm" role="form" method="POST" th:action="@{categoryWise}">
 										<div class="box-body">
 
-											<div class="form-group col-md-6">
+											<!--<div class="form-group col-md-6">
 												<label>Category</label> <label style="color: red">*</label> <select
 													class="form-control" title="" name="category">
 													
@@ -219,9 +81,9 @@
 												
 											</div>
 
+-->
 
-
-											<div class="form-group col-md-6">
+											<!--<div class="form-group col-md-6">
 												<label>Item</label> <label style="color: red">*</label> <select
 													class="form-control" title="" name="Item">
 													<option value="Uniform">Select Item</option>
@@ -230,7 +92,7 @@
 												</select>
 												
 											</div>
-
+-->
 
 											<div class="form-group col-md-6">
 												<label for="inputEmail4">From Date</label><span
@@ -245,15 +107,26 @@
 													placeholder="Date" title="This field is required">
 											</div>
 
-			<div class="form-group col-md-6">
-												<label>Format Type</label> <label style="color: red">*</label> <select
-													class="form-control" title="">
-													<option value="">Select Excel</option>
-													<option value="pdf">Select PDF</option>
+		<!--	<div class="form-group col-md-6">
+												<label>DesFormat</label> <label style="color: red">*</label> <select
+													class="form-control"  name="format">
+													<option value="P">PDF</option>
+													<option value="E">Excel</option>
+
+												</select>-->
+												
+											</div>
+											<div class="form-group col-md-6">
+												<label>DesFormat</label> <label style="color: red">*</label> <select
+													class="form-control" title="" name="desRecord">
+													
+													<option value="P"> PDF</option>
+													<option value="E"> Excel</option>
 
 												</select>
 												
 											</div>
+
 
 											
 											<!--<div class="container">
