--- a/src/main/resources/templates/layouts/reportview/stockLedgerDetails.html
+++ b/src/main/resources/templates/layouts/reportview/stockLedgerDetails.html
@@ -67,7 +67,7 @@
 									</div>
 									<!-- /.box-header -->
 									<!-- form start -->
-									<form id="categoryForm" role="form" method="POST" th:action="@{stockitem}">
+									<form id="categoryForm" role="form" method="POST" th:action="@{ledgerDetail}">
 										<div class="box-body">
 
 											<!--<div class="form-group col-md-6">
@@ -107,15 +107,26 @@
 													placeholder="Date" title="This field is required">
 											</div>
 
-			<div class="form-group col-md-6">
+		<!--	<div class="form-group col-md-6">
 												<label>DesFormat</label> <label style="color: red">*</label> <select
 													class="form-control"  name="format">
-													<option value="pdf"> PDF</option>
-													<option value="excel">Excel</option>
+													<option value="P">PDF</option>
+													<option value="E">Excel</option>
+
+												</select>-->
+												
+											</div>
+											<div class="form-group col-md-6">
+												<label>DesFormat</label> <label style="color: red">*</label> <select
+													class="form-control" title="" name="desRecord">
+													
+													<option value="P"> PDF</option>
+													<option value="E"> Excel</option>
 
 												</select>
 												
 											</div>
+
 
 											
 											<!--<div class="container">
